app/static-website/k8s/ingress-service-PATH.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: demdbcip
      port:
        number: 80
  rules:
  - host: demo.com
    http:
      paths:
      - backend:
          service:
            name: appcipservice
            port:
              number: 80
        path: "/demo1"
        pathType: Exact
      - backend:
          service:
            name: demo2cip
            port:
              number: 80
        path: "/demo2"
        pathType: Prefix
      - backend:
          service:
            name: demo3cip
            port:
              number: 80
        path: "/demo3"
        pathType: Prefix
      - backend:
          service:
            name: demdbcip
            port:
              number: 80
        path: "/"
        pathType: Prefix
