app/static-website/k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  tls:
    - secretName: appsecret
  ingressClassName: nginx
  defaultBackend:
    service:
      name: demoappdbservice
      port:
        number: 80
  rules:
  - host: demo.com
    http:
      paths:
      - backend:
          service:
            name: appcipservice
            port:
              number: 80
        path: /
        pathType: Prefix
